# ChangeLog for net-im/kadu
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/kadu/ChangeLog,v 1.33 2005/10/13 13:13:28 mkay Exp $

*kadu-0.4.2 (13 Oct 2005)

  13 Oct 2005; <mkay@gentoo.org> +kadu-0.4.2.ebuild:
  Version bump

*kadu-0.4.1-r1 (08 Oct 2005)

  08 Oct 2005; <mkay@gentoo.org> +kadu-0.4.1-r1.ebuild:
  Most modules in newer versions

  25 Jul 2005; <sekretarz@gentoo.org> kadu-0.4.1.ebuild:
  Stable on x86 due security bug #99583

  22 Jul 2005; Danny van Dyk <kugelfang@gentoo.org> kadu-0.4.1.ebuild:
  Marked stable on amd64.

  21 Jul 2005; Jory A. Pratt <anarchy@gentoo.org> kadu-0.4.1.ebuild:
  Stable on PPC. bug #99853

*kadu-0.4.1 (20 Jul 2005)

  20 Jul 2005; <sekretarz@gentoo.org> +kadu-0.4.1.ebuild:
  Version bump due security bug, bug #99583

  07 Jul 2005; Caleb Tennis <caleb@gentoo.org> kadu-0.3.8.ebuild,
  kadu-0.4.0.ebuild:
  Fix qt dep

  17 Jun 2005; Joseph Jezak <josejx@gentoo.org> kadu-0.4.0.ebuild:
  Marked ppc stable for bug #95485.

  08 Jun 2005; <sekretarz@gentoo.org> -kadu-0.3.6.ebuild,
  -kadu-0.3.7.ebuild, -kadu-0.3.9.ebuild, -kadu-0.4.0_rc2.ebuild,
  -kadu-0.4.0_rc2-r1.ebuild, -kadu-0.4.0_rc3.ebuild, kadu-0.4.0.ebuild:
  0.4.0 stable on amd64, ebuild clean up

  21 Apr 2005; Sven Wegener <swegener@gentoo.org> :
  Added missing digest entries.

  20 Apr 2005; Karol Wojtaszek <sekretarz@gentoo.org> kadu-0.4.0.ebuild:
  Added screenshot module

*kadu-0.4.0 (17 Apr 2005)

  17 Apr 2005; Karol Wojtaszek <sekretarz@gentoo.org>
  +files/kadu-toolbar_toggle-gentoo.diff, +kadu-0.4.0.ebuild:
  Version bump, thanks to Marcin Kryczek <aye@gentoo.pl>

*kadu-0.4.0_rc3 (30 Mar 2005)

  30 Mar 2005; Karol Wojtaszek <sekretarz@gentoo.org>
  +kadu-0.4.0_rc3.ebuild:
  Version bump

  21 Mar 2005; Karol Wojtaszek <sekretarz@gentoo.org> kadu-0.3.9.ebuild:
  Backported spec_config function, which change libs paths in arts_sound
  module, bug #85994
