@@ -1,10 +1,10 @@
-MD5 97a333878644a0b35a4414de1812ede4 ChangeLog 4464
+MD5 164d03475e9722954f383468f9b10126 ChangeLog 4611
 MD5 ef2265e113f71f0c35b266aa93a224cb kadu-0.3.8.ebuild 859
 MD5 c30b964070d0f19383b5da19f14b79dd kadu-0.4.0.ebuild 7598
 MD5 90287df2c186fa948a71b3864453fcad kadu-0.4.1.ebuild 7501
 MD5 33e3466c984190a7bda01f7d4089f7a6 metadata.xml 245
 MD5 c3f7107c1a5212cf9677f6ea442c7e1e kadu-0.4.1-r1.ebuild 8345
-MD5 44a6319b550555324e5634235f693792 kadu-0.4.2.ebuild 8360
+MD5 0f9e1de604bd45e8a2d41a7214908f6d kadu-0.4.2.ebuild 8740
 MD5 7259b6aef0a2d10501b79c455fe4b763 files/digest-kadu-0.3.8 63
 MD5 27947a323558dd9aaa82c5b164f398b8 files/digest-kadu-0.4.0 1699
 MD5 5ec29be748778e605f23b2efe84b78a1 files/digest-kadu-0.4.1 1699
