@@ -1,6 +1,10 @@
 # ChangeLog for net-im/kadu
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/kadu/ChangeLog,v 1.33 2005/10/13 13:13:28 mkay Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/kadu/ChangeLog,v 1.34 2005/10/13 19:30:49 mkay Exp $
+
+  13 Oct 2005; <mkay@gentoo.org> kadu-0.4.2.ebuild:
+  Making dependency on libsndfile optional (bug #103285) and adding
+  config_wizard local USE
 
 *kadu-0.4.2 (13 Oct 2005)
 
